# transformer-from-scratch

./: .gitignore  README.md  pyproject.toml  temp.ipynb
src/datasets/: iwslt.py  tokenizer.py
src/transformer_from_scratch/datasets/: dataloader.py  iwslt.py  preprocessing.py  tokenizer.py
src/transformer_from_scratch/models/: attention.py  decoder.py  decoder_block.py  embedding.py  encoder.py  encoder_block.py  feed_forward.py  layer_norm.py  multi_head_attention.py  positional_embedding.py
